--- a/example/index.html
+++ b/example/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Solar</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="partOne">
+        <article class="headings">
+            <h1>Solsystemet</h1>
+            <h6>Solaris</h6>
+        </article>
+
+        <article class="planets"></article> 
+    </section>
+
+    <section class="partTwo"></section>
     <script src="js/index.js"></script>
 </body>
 </html>
