--- a/example/index.html
+++ b/example/index.html
@@ -19,10 +19,13 @@
             <h6>Solaris</h6>
         </article>
 
-        <article class="planets"></article> 
+        <article class="planets"></article>
+        <footer> <img src="img/originalzocom.png" alt=""> </footer> 
     </section>
 
     <section class="partTwo"></section>
+
+    
     <script src="js/index.js"></script>
 </body>
 </html>
