--- a/example/index.html
+++ b/example/index.html
@@ -20,7 +20,17 @@
             
         </article>
 
-        <article class="planets"><figure class="FigurePlanet1">planet1</figure></article>
+        <article class="planets">
+            <figure class="Solis" id="Solis">solis</figure>
+            <figure class="Mercurialis" id="Mercurialis">Mercurialis</figure>
+            <figure class="venus" id="venus">solis</figure>
+            <figure class="Tellus" id="Tellus">solis</figure>
+            <figure class="Mars" id="Mars">solis</figure>
+            <figure class="Lovis" id="Lovis">solis</figure>
+            <figure class="Sarturnus" id="Sarturnus">solis</figure>
+            <figure class="Uranus" id="Uranus">solis</figure>
+            <figure class="Neptunus" id="Neptunus">solis</figure>
+        </article>
         <footer> <img src="img/originalzocom.png" alt=""> </footer> 
     </section>
 
