--- a/example/index.html
+++ b/example/index.html
@@ -14,13 +14,13 @@
 </head>
 <body>
     <section class="partOne">
-        <article class="headings">
+        <section class="headings">
             <h1>Solsystemet</h1>
             <h6>Solaris</h6>
             
-        </article>
+        </section>
 
-        <article class="planets">
+        <section class="planets">
             <figure class="Solis" id="Solis">solis</figure>
             <figure class="Mercurialis" id="Mercurialis">Mercurialis</figure>
             <figure class="venus" id="venus">solis</figure>
@@ -30,7 +30,7 @@
             <figure class="Sarturnus" id="Sarturnus">solis</figure>
             <figure class="Uranus" id="Uranus">solis</figure>
             <figure class="Neptunus" id="Neptunus">solis</figure>
-        </article>
+        </section>
         <footer> <img src="img/originalzocom.png" alt=""> </footer> 
     </section>
 
