--- a/example/index.html
+++ b/example/index.html
@@ -22,10 +22,10 @@
 
         <section class="planets">
             <figure class="Solis" id="Solis">solis</figure>
-            <figure class="Mercurialis" id="Mercurialis">Mercurialis</figure>
-            <figure class="venus" id="venus">solis</figure>
-            <figure class="Tellus" id="Tellus">solis</figure>
-            <figure class="Mars" id="Mars">solis</figure>
+            <figure class="Mercurialis" id="Mercurialis">M</figure>
+            <figure class="venus" id="venus">venus</figure>
+            <figure class="Tellus" id="Tellus">tellus</figure>
+            <figure class="Mars" id="Mars">Mars</figure>
             <figure class="Lovis" id="Lovis">solis</figure>
             <figure class="Sarturnus" id="Sarturnus">solis</figure>
             <figure class="Uranus" id="Uranus">solis</figure>
@@ -35,9 +35,6 @@
     </section>
 
     <section class="partTwo">
-        <button>Back</button>
-        
-        <footer> <img src="img/originalzocom.png" alt=""> </footer> 
     </section>
 
     
