--- a/example/index.html
+++ b/example/index.html
@@ -17,19 +17,18 @@
         <section class="headings">
             <h1>Solsystemet</h1>
             <h6>Solaris</h6>
-            
         </section>
 
         <section class="planets">
-            <figure class="Solis" id="Solis">solis</figure>
-            <figure class="Mercurialis" id="Mercurialis">M</figure>
-            <figure class="venus" id="venus">venus</figure>
-            <figure class="Tellus" id="Tellus">tellus</figure>
-            <figure class="Mars" id="Mars">Mars</figure>
-            <figure class="Lovis" id="Lovis">solis</figure>
-            <figure class="Sarturnus" id="Sarturnus">solis</figure>
-            <figure class="Uranus" id="Uranus">solis</figure>
-            <figure class="Neptunus" id="Neptunus">solis</figure>
+            <figure class="Solis" id="Solis"></figure>
+            <figure class="Mercurialis" id="Mercurialis"></figure>
+            <figure class="venus" id="venus"></figure>
+            <figure class="Tellus" id="Tellus"></figure>
+            <figure class="Mars" id="Mars"></figure>
+            <figure class="Lovis" id="Lovis"></figure>
+            <figure class="Sarturnus" id="Sarturnus"></figure>
+            <figure class="Uranus" id="Uranus"></figure>
+            <figure class="Neptunus" id="Neptunus"></figure>
         </section>
         <footer> <img src="img/originalzocom.png" alt=""> </footer> 
     </section>
