--- a/example/index.html
+++ b/example/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,7 +29,7 @@
             <figure class="Tellus" id="Tellus"></figure>
             <figure class="Mars" id="Mars"></figure>
             <figure class="Lovis" id="Lovis"></figure>
-            <figure class="Sarturnus" id="Sarturnus"></figure>
+            <figure class="Sarturnus" id="Sarturnus"><aside class="saturnusRing"></aside></figure>
             <figure class="Uranus" id="Uranus"></figure>
             <figure class="Neptunus" id="Neptunus"></figure>
         </section>
@@ -34,6 +37,7 @@
     </section>
 
     <section class="partTwo">
+        
     </section>
 
     
