--- a/example/index.html
+++ b/example/index.html
@@ -29,7 +29,10 @@
             <figure class="Tellus" id="Tellus"></figure>
             <figure class="Mars" id="Mars"></figure>
             <figure class="Lovis" id="Lovis"></figure>
-            <div class="saturn-container"><figure class="Sarturnus" id="Sarturnus"></figure><div class="saturnusRing"></div></div>
+            <div class="saturn-container">
+                <figure class="Sarturnus" id="Sarturnus"></figure>
+                <div class="saturnusRing"></div>
+            </div>
             <figure class="Uranus" id="Uranus"></figure>
             <figure class="Neptunus" id="Neptunus"></figure>
         </section>
