senaste Torsdag kl 16

--- a/example/index.html
+++ b/example/index.html
@@ -24,7 +24,7 @@
 
         <section class="planets">
             <figure class="Solis" id="Solis"></figure>
-            <figure class="Mercurialis" id="Mercurialis">.</figure>
+            <figure class="Mercurialis" id="Mercurialis"></figure>
             <figure class="venus" id="venus"></figure>
             <figure class="Tellus" id="Tellus"></figure>
             <figure class="Mars" id="Mars"></figure>
